# orpfinder

./: CMakeLists.txt  LICENSE  README.md  orpfinder.spec
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: codeql.yml  fedora.yml  iwyu.yml  ubuntu.yml
packaging/fedora/: orpfinder.spec
src/: main.cpp
src/application/: application.cpp  application.hpp
